curl fixes and slight ui tweaks

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,8 +4,9 @@ block header
   h1= title
 block content
   h2 Welcome to Chronicle
-  button Write
-  button Sign in
-  button Sign up
+  .buttons
+    button Sign in
+    button Write
+    button Sign up
 block footer 
   p Thanks for taking a look at our service. We hope you'll come back
